# BriX

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  aaa.xml  aaa.xml~  bbb.xml  bbb.xml~  ccc.xml  ccc.xml~  ffx_test1.xml  isotope_parser.py~  nonint_test.xml  replace_BL.txt
examples/: FR_transition.xml~  FRforward.xml~  LWR42forward.xml~  LWRblending.xml~  MOXblending.xml~  MOXforward.xml  MOXforward.xml~  reprocess_input.txt~
libraries/2.0E/: 922350.txt  922380.txt  params.txt
libraries/2.5E/: 922350.txt  922380.txt  fuel.txt  params.txt
libraries/3.0-100/: 922350.txt  922380.txt  fuel.txt  params.txt
libraries/3.0-1000/: 922350.txt  922380.txt  params.txt
libraries/3.0-1500/: 922350.txt  922380.txt  fuel.txt  params.txt
libraries/3.0-2000/: 922350.txt  922380.txt  fuel.txt  params.txt
libraries/3.0-32/: 922350.txt  922380.txt  fuel.txt  params.txt
libraries/3.0-500/: 922350.txt  922380.txt  fuel.txt  params.txt
libraries/3.0E/: 922350.txt  922380.txt  params.txt  structural.txt
libraries/3.5E/: 922350.txt  922380.txt  params.txt
libraries/4.0E/: 922350.txt  922380.txt  params.txt
src/: .cproject  CMakeLists.txt  CMakeLists.txt~  ReactorLite.cc  ReactorLite.h  ReactorLite_tests.cc  ReactorX.cc  ReactorX.h  blending.cc  blending.cpp  blending.h  fuelfabX.cc  fuelfabX.h  fuelfacilityx.cc  fuelfacilityx.h  generaltools.cc  generaltools.cc~  generaltools.h  librarytools.cc  librarytools.cc~  librarytools.h  reactorX.cc  reactorX.h  reactorlite.cc  reactorlite.cc~  reactorlite.h  reactorlite.h~  reactorlite_tests.cc  structures.cc  structures.h
(+18 files in other folders)
